--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -9,6 +10,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 .calculator {
   width: 100%;
   height: 100%;
@@ -28,7 +30,7 @@ input[type="text"] {
   font-weight: bold;
   font-size: 20px;
 } 
-button {
+.line button {
 width: 19%;
 height: 15%;
 margin: 2px;
